--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <title>PA#2</title>
 <style>
     body {
-        background-color: #818181;
+        background-color: #EEEEEE;
     }
 </style>
 
@@ -17,7 +17,7 @@
 </head>
 <body onload="init()">
 
-<h2>Snail Surface</h2>
+<h2>Wallis’s Conical Edge</h2>
 
 <p id="message">Drag your mouse on the cube to rotate it.<br>
 (On a touch screen, you can use your finger.)</p>
